--- a/conf/application.conf
+++ b/conf/application.conf
@@ -352,7 +352,5 @@ db {
   #default.logSql=true
 }
 
-trackerUrl = "http://130.211.61.73:9000/collect"
-db.default.driver=org.sqlite.JDBC
-#db.default.url="jdbc:sqlite:/home/mac/source_control/poc/tytanis/db/simulation"
-db.default.url="jdbc:sqlite:/var/lib/tytanis/db/simulation"
+scratchDir = "/tmp/publish-dir"
+
